# Caihub-2.0

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
agents/: README.md
app/: __init__.py  main.py
app/agents/: __init__.py  registry.py  runtime.py
app/api/: __init__.py  dependencies.py  router.py
app/core/: application.py  config.py  lifespan.py
app/db/: __init__.py  init_db.py  model_registry.py  session.py
app/domains/: __init__.py
app/events/: __init__.py  asset.py  base.py  catalog.py  quality.py  vision.py
app/mesh/: __init__.py  contracts.py  flows.py
app/models/: __init__.py  data_asset.py  dish.py  operation_snapshot.py  operator.py  production_event.py  standard.py  store.py
app/repositories/: __init__.py  data_asset.py  dish.py  operations.py  operator.py  production_event.py  standard.py  store.py
app/schemas/: __init__.py  agent_runtime.py  agent_task.py  architecture.py  dish.py  (+8 more)
deploy/: ai.caihub.ai-food-news-weekly.plist  ai.caihub.ai-food-news.plist
docs/: GitHub_Release_v0.1.0.md  发布说明.md  旧仓库复用分析.md  目录总览.md
migrations/: README  env.py
prompts/: ai_food_news_weekly_prompt.txt
scripts/: run_ai_food_news_email.sh  run_ai_food_news_weekly_email.sh  send_ai_food_news_email.py
skills/: README.md
tests/: test_architecture.py  test_asset_events.py  test_data_asset_materialization.py  test_data_assets.py  test_dishes.py  test_health.py  test_operations.py  test_orchestration.py  test_org_entities.py  test_production.py  test_production_semantics.py  test_runtime_skeleton.py  test_standards.py  test_vision.py
(+64 files in other folders)
